--- a/app_flask/templates/vendor_delivered.html
+++ b/app_flask/templates/vendor_delivered.html
@@ -11,12 +11,25 @@
     <title>Delivered Orders</title>
     <style>
       .bottom-footer {
-        position: relative;
-        bottom:0;
-        width:100%;
-        height:40px;   /* Height of the footer */
-        background:rgba(9, 78, 226, 0.226);
-      }
+      margin-top: auto;
+      width:100%;
+      height:auto;   /* Height of the footer */
+      background:rgba(9, 78, 226, 0.226);
+    }
+    body {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      overflow-x: hidden;
+    }
+
+    body::-webkit-scrollbar,
+    body::-webkit-scrollbar-track,
+    body::-webkit-scrollbar-thumb{
+      width: 0.1em;
+      background-color: transparent;
+      background-color: transparent;
+    }
     </style>
   </head>
   <body>
@@ -131,6 +144,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-   
+
   </body>
 </html>
