--- a/app_flask/static/styles/style.css
+++ b/app_flask/static/styles/style.css
@@ -90,13 +90,18 @@ body h1, h2, h3, h4, h5, h6 {
     -o-transition: all 700ms linear;
 }
 
+.owl-carousel .item:hover{
+    opacity: 1;
+    color: red;
+}
+
 .owl-carousel .item{
     margin: 3px;
 }
 .owl-carousel .item img{
     display: block;
     width: 100%;
-    height: auto;
+    /* height: auto; */
 }
 
 .owl-carousel .item {
