--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -71,18 +71,24 @@
 
   <div class="container">
     {% block content %}{% endblock %}
-    <div class="page-content page-container" id="page-content">
+    <!-- <div class="page-content page-container" id="page-content">
       <div class="padding">
         <div class="row container-fluid">
-          <div class="col-lg-12 grid-margin stretch-card">
-            <div class="card">
+          <div class="col-lg-12 grid-margin stretch-card"> -->
+            <div class="container card" style="background-color: #cdcdcd;">
               <div class="card-body">
-                <h4 class="card-title">Featured Parts</h4>
-                <div class="owl-carousel">
+                <div class="row">
+                  <div class="col"><h4 class="card-title">Featured Parts</h4> </div>
+                  <div class="col"><span class="top float-right"><button class="btnStopOwlCarousel btn-general">Stop</button></span></div>
+                  </div>
+
+                </div>
+
+                <div class="owl-carousel owl-theme" id="featuredParts">
                   {% for part in parts %}
                   <div class="item">
                     <div class="image-container">
-                      <img src="../static/images/{{part.part_image}}" alt="image" width="160" height="100" class="part_image_file"/>
+                      <img src="../static/images/{{part.part_image}}" alt="image"  class="part_image_file"/>
                     </div>
                     <!--<img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/> -->
                     <p>{{ part.part_name }}<br>{{part.part_price}}</p>
@@ -95,10 +101,10 @@
 
               </div>
             </div>
-          </div>
+          <!-- </div>
         </div>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
     <!-- end of carousel -->
 
     <!-- footer section -->
@@ -156,39 +162,8 @@
     <script src="../static/scripts/mechanic_homepage.js"></script>
     <script src="../static/scripts/review_job.js"></script>
     <script src="../static/scripts/logout.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
-    <script>
-      $(document).ready(function() {
-        $(".owl-carousel").owlCarousel({
-          autoPlay: 3000,
-          items : 4,
-          itemsDesktop : [1199,3],
-          itemsDesktopSmall : [979,3],
-          center: true,
-          nav:true,
-          loop:true,
-          responsive: {
-            600: {
-              items: 4
-            }
-          }
-        });
-      });
-    </script>
-    <script>
-      $(function(){
-        $(".owl-carousel").owlCarousel({
-          items:2,
-          loop:true,
-          nav: true,
-          navText:['<i class="fa fa-angle-left"></i>','<i class="fa fa-angle-right"></i>'],
-          dots:false,
-          autoplay:true,
-          smartSpeed:700,
-          autoplayHoverPause:true,
-        });
-      });
-    </script>
-    <!-- jQuery script -->
+    <script src="../static/scripts/owlcarousel.js"></script>
   </body>
   </html>
