--- a/app_flask/static/styles/style.css
+++ b/app_flask/static/styles/style.css
@@ -95,31 +95,15 @@ body h1, h2, h3, h4, h5, h6 {
     color: red;
 }
 
-.owl-carousel .item{
-    margin: 3px;
-}
-.owl-carousel .item img{
-    display: block;
-    width: 100%;
-    /* height: auto; */
-}
-
-.owl-carousel .item {
-    margin: 3px;
-}
-
 .owl-carousel{
+    margin-left: 15px;
     margin-bottom:15px;
-}
-.stretch-card>.card {
-    width: 100%;
-    min-width: 100%
 }
 
 .flex {
-    -webkit-box-flex: 1;
+    /* -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
-    flex: 1 1 auto
+    flex: 1 1 auto */
 }
 
 @media (max-width:991.98px) {
