--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -71,99 +71,87 @@
 
   <div class="container">
     {% block content %}{% endblock %}
-    <!-- <div class="page-content page-container" id="page-content">
-      <div class="padding">
-        <div class="row container-fluid">
-          <div class="col-lg-12 grid-margin stretch-card"> -->
-            <div class="container card" style="background-color: #cdcdcd;">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col"><h4 class="card-title">Featured Parts</h4> </div>
-                  <div class="col"><span class="top float-right"><button class="btnStopOwlCarousel btn-general">Stop</button></span></div>
-                  </div>
-
-                </div>
-
-                <div class="owl-carousel owl-theme" id="featuredParts">
-                  {% for part in parts %}
-                  <div class="item">
-                    <div class="image-container">
-                      <img src="../static/images/{{part.part_image}}" alt="image"  class="part_image_file"/>
-                    </div>
-                    <!--<img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/> -->
-                    <p>{{ part.part_name }}<br>{{part.part_price}}</p>
-                    <!-- <a href="/client/myorders" {% if request.method == 'GET' %}class="active"{% endif %}>Link 1</a> -->
-                    <!-- <a href="//myorders" {% if request.method == 'POST' %}class="active"{% endif %}>Link 2</a> -->
-                    <a class="btn btn-primary orderPartBtn" data-part-id="{{part.part_id}}">Order this part</a>
-                  </div>
-                  {% endfor %}
-                </div>
-
-              </div>
-            </div>
-          <!-- </div>
-        </div>
-      </div> -->
-    <!-- </div> -->
-    <!-- end of carousel -->
-
-    <!-- footer section -->
-    <div class="container footer">
-      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <div class="card" style="background-color: #cdcdcd;">
+      <div class="card-body">
         <div class="row">
-          <div class="col-12 col-md">
-            <img class="mb-2" src="../static/images/logo.png" alt="" width="30" height="20">
-            <small class="d-block mb-3 text-muted">© 2023</small>
-          </div>
-          <div class="col-6 col-md">
-            <!-- <h5 class="text-secondary">Brand</h5> -->
-            <!-- <ul class="list-unstyled text-small">
-              <li><a href="#">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#features">Features</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-            </ul> -->
-          </div>
-          <div class="col-6 col-md">
-            <h5 class="text-secondary">More</h5>
-            <ul class="list-unstyled text-small">
-              <li><a href="#">FAQ's</a></li>
-              <li><a href="#">Privacy & Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-md">
-            <h5 id="contact" class="text-secondary">Contact</h5>
-            <ul class="list-unstyled text-small">
-              <li>Address: Dar-es-Salaam Rd off Enterprise Road, Industrial Area</li>
-              <li>Email: info@servicemtaani.com</li>
-              <li>Phone: +254700100200</li>
-            </ul>
-          </div>
+          <div class="col"><h4 class="card-title">Featured Parts</h4> </div>
+          <div class="col"><span class="top float-right"><button class="btnStopOwlCarousel btn-general">Stop</button></span></div>
         </div>
-      </footer>
+      </div>
+      <div class="owl-carousel d-flex align-items-center p-10 justify-content-between " id="featuredParts">
+        {% for part in parts %}
+        <div class="item">
+          <div class="image-container">
+            <img src="../static/images/{{part.part_image}}" alt="image"  class="part_image_file"/>
+          </div>
+          <!--<img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/> -->
+          <p>{{ part.part_name }}<br>{{part.part_price}}</p>
+          <a class="btn btn-primary orderPartBtn" data-part-id="{{part.part_id}}">Order this part</a>
+        </div>
+        {% endfor %}
+      </div>
+
     </div>
-    <!-- End footer section -->
   </div>
+  <!-- end of carousel -->
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
+  <!-- footer section -->
+  <div class="container footer">
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+      <div class="row">
+        <div class="col-12 col-md">
+          <img class="mb-2" src="../static/images/logo.png" alt="" width="30" height="20">
+          <small class="d-block mb-3 text-muted">© 2023</small>
+        </div>
+        <div class="col-6 col-md">
+          <!-- <h5 class="text-secondary">Brand</h5> -->
+          <!-- <ul class="list-unstyled text-small">
+            <li><a href="#">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul> -->
+        </div>
+        <div class="col-6 col-md">
+          <h5 class="text-secondary">More</h5>
+          <ul class="list-unstyled text-small">
+            <li><a href="#">FAQ's</a></li>
+            <li><a href="#">Privacy & Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5 id="contact" class="text-secondary">Contact</h5>
+          <ul class="list-unstyled text-small">
+            <li>Address: Dar-es-Salaam Rd off Enterprise Road, Industrial Area</li>
+            <li>Email: info@servicemtaani.com</li>
+            <li>Phone: +254700100200</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <!-- End footer section -->
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- font awesome icons -->
-    <script src="https://kit.fontawesome.com/2c73e96254.js" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
 
-    <script src="../static/scripts/accept_bids.js"></script>
-    <script src="../static/scripts/ordered_parts.js"></script>
-    <script src="../static/scripts/create_job.js"></script>
-    <script src="../static/scripts/modal_bid.js"></script>
-    <script src="../static/scripts/mechanic_homepage.js"></script>
-    <script src="../static/scripts/review_job.js"></script>
-    <script src="../static/scripts/logout.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- font awesome icons -->
+  <script src="https://kit.fontawesome.com/2c73e96254.js" crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
-    <script src="../static/scripts/owlcarousel.js"></script>
-  </body>
-  </html>
+  <script src="../static/scripts/accept_bids.js"></script>
+  <script src="../static/scripts/ordered_parts.js"></script>
+  <script src="../static/scripts/create_job.js"></script>
+  <script src="../static/scripts/modal_bid.js"></script>
+  <script src="../static/scripts/mechanic_homepage.js"></script>
+  <script src="../static/scripts/review_job.js"></script>
+  <script src="../static/scripts/logout.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
+  <script src="../static/scripts/owlcarousel.js"></script>
+</body>
+</html>
