--- a/app_flask/templates/vendor_catalogue.html
+++ b/app_flask/templates/vendor_catalogue.html
@@ -186,7 +186,7 @@
               </div><br>
               <div class="form-group">
                 <label for="addfile">Add file</label><br>
-                <input type="file" class="form-control-file" id="img" name="img" accept="image/*" value="Upload">
+                <input type="file" class="form-control-file" required id="img" name="img" accept="image/*" value="Upload">
               </div>
               <br><button type="submit" class="newpartbutton btn btn-primary">Add Part</button>
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
