--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../static/styles/button.css">
   <link rel="stylesheet" href="../static/styles/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet"/>
-  <style>
+  <!-- <style>
     .image-container {
       width: 160px; /* Set your desired width */
       height: 100px; /* Set your desired height */
@@ -27,7 +27,7 @@
       height: 100%;
       object-fit: cover;
     }
-  </style>
+  </style> -->
 
 </head>
 <body>
@@ -75,83 +75,86 @@
       <div class="card-body">
         <div class="row">
           <div class="col"><h4 class="card-title">Featured Parts</h4> </div>
-          <div class="col"><span class="top float-right"><button class="btnStopOwlCarousel btn-general">Stop</button></span></div>
+          <div class="col"><span class="top float-right"><button class="btnPlayOwlCarousel btn-general">Play</button></span></div>
         </div>
       </div>
-      <div class="owl-carousel d-flex align-items-center p-10 justify-content-between " id="featuredParts">
+      <div class="container owl-carousel" id="featuredParts">
         {% for part in parts %}
-        <div class="item">
-          <div class="image-container">
-            <img src="../static/images/{{part.part_image}}" alt="image"  class="part_image_file"/>
+        <div class="featuredItem bg-dark">
+          <!-- <div class="image-container"> -->
+            <img src="../static/images/{{part.part_image}}" alt="image" />
+            <!-- </div> -->
+            <div class="partOverlay">
+              <div class="part-info">
+                <p>Part: {{ part.part_name }}<br>Price: Ksh. {{part.part_price}}</p>
+                <a class="btn btn-general orderPartBtn" data-part-id="{{part.part_id}}">Order this part</a>
+              </div>
+            </div>
           </div>
-          <!--<img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/> -->
-          <p>{{ part.part_name }}<br>{{part.part_price}}</p>
-          <a class="btn btn-primary orderPartBtn" data-part-id="{{part.part_id}}">Order this part</a>
+          {% endfor %}
         </div>
-        {% endfor %}
-      </div>
 
+      </div>
     </div>
+    <!-- end of carousel -->
+
+    <!-- footer section -->
+    <div class="container footer">
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md">
+            <img class="mb-2" src="../static/images/logo.png" alt="" width="30" height="20">
+            <small class="d-block mb-3 text-muted">© 2023</small>
+          </div>
+          <div class="col-6 col-md">
+            <!-- <h5 class="text-secondary">Brand</h5> -->
+            <!-- <ul class="list-unstyled text-small">
+              <li><a href="#">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+            </ul> -->
+          </div>
+          <div class="col-6 col-md">
+            <h5 class="text-secondary">More</h5>
+            <ul class="list-unstyled text-small">
+              <li><a href="#">FAQ's</a></li>
+              <li><a href="#">Privacy & Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5 id="contact" class="text-secondary">Contact</h5>
+            <ul class="list-unstyled text-small">
+              <li>Address: Dar-es-Salaam Rd off Enterprise Road, Industrial Area</li>
+              <li>Email: info@servicemtaani.com</li>
+              <li>Phone: +254700100200</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <!-- End footer section -->
   </div>
-  <!-- end of carousel -->
 
-  <!-- footer section -->
-  <div class="container footer">
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-      <div class="row">
-        <div class="col-12 col-md">
-          <img class="mb-2" src="../static/images/logo.png" alt="" width="30" height="20">
-          <small class="d-block mb-3 text-muted">© 2023</small>
-        </div>
-        <div class="col-6 col-md">
-          <!-- <h5 class="text-secondary">Brand</h5> -->
-          <!-- <ul class="list-unstyled text-small">
-            <li><a href="#">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-          </ul> -->
-        </div>
-        <div class="col-6 col-md">
-          <h5 class="text-secondary">More</h5>
-          <ul class="list-unstyled text-small">
-            <li><a href="#">FAQ's</a></li>
-            <li><a href="#">Privacy & Policy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5 id="contact" class="text-secondary">Contact</h5>
-          <ul class="list-unstyled text-small">
-            <li>Address: Dar-es-Salaam Rd off Enterprise Road, Industrial Area</li>
-            <li>Email: info@servicemtaani.com</li>
-            <li>Phone: +254700100200</li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  </div>
-  <!-- End footer section -->
-</div>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
 
-<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- font awesome icons -->
+    <script src="https://kit.fontawesome.com/2c73e96254.js" crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- font awesome icons -->
-  <script src="https://kit.fontawesome.com/2c73e96254.js" crossorigin="anonymous"></script>
+    <script src="../static/scripts/accept_bids.js"></script>
+    <script src="../static/scripts/ordered_parts.js"></script>
+    <script src="../static/scripts/create_job.js"></script>
+    <script src="../static/scripts/modal_bid.js"></script>
+    <script src="../static/scripts/mechanic_homepage.js"></script>
+    <script src="../static/scripts/review_job.js"></script>
+    <script src="../static/scripts/logout.js"></script>
 
-  <script src="../static/scripts/accept_bids.js"></script>
-  <script src="../static/scripts/ordered_parts.js"></script>
-  <script src="../static/scripts/create_job.js"></script>
-  <script src="../static/scripts/modal_bid.js"></script>
-  <script src="../static/scripts/mechanic_homepage.js"></script>
-  <script src="../static/scripts/review_job.js"></script>
-  <script src="../static/scripts/logout.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
-  <script src="../static/scripts/owlcarousel.js"></script>
-</body>
-</html>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
+    <script src="../static/scripts/owlcarousel.js"></script>
+  </body>
+  </html>
