--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -4,30 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <title>{% block title %} Title {% endblock %}</title> -->
 
   {% if title %}
   <title>Service Mtaani - {{ title }}</title>
   {% else %}
   <title>Service Mtaani</title>
   {% endif %}
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/styles/button.css">
   <link rel="stylesheet" href="../static/styles/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet"/>
-  <!-- <style>
-    .image-container {
-      width: 160px; /* Set your desired width */
-      height: 100px; /* Set your desired height */
-    }
-
-    .part_image_file {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style> -->
 
 </head>
 <body>
@@ -45,13 +31,6 @@
           <li class="nav-item active">
             <a id="home-link" class="nav-link" href="{{ url_for(current_user.__class__.__name__) }}">Home <span class="sr-only">(current)</span></a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li> -->
-          <!-- <div class="hidden">
-            {{ role }}
-          </div> -->
-
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact Us</a>
           </li>
@@ -68,10 +47,9 @@
   </nav>
   <!-- End of Navigation Bar -->
 
-
   <div class="container">
     {% block content %}{% endblock %}
-    <div class="card" style="background-color: #cdcdcd;">
+    <div class="card" style="background-color: #f9f9fa;">
       <div class="card-body">
         <div class="row">
           <div class="col"><h4 class="card-title">Featured Parts</h4> </div>
