--- a/app_flask/templates/client_orders.html
+++ b/app_flask/templates/client_orders.html
@@ -16,20 +16,20 @@
     <h1 id="jobs-heading">Parts Ordered</h1>
     {% for part in orders %}
     <div class="card my-2 shadow-sm">
-      <div class="card-header row d-flex justify-content-between" id="headingOne">
+      <div class="card-header row d-flex justify-content-between" id="heading{{ loop.index }}">
         <h2 class="mb-0 col-md-9" >
-          <button class="btn btn-block text-left accordionBtn d-flex align-items-center justify-content-between"  type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button class="btn btn-block text-left accordionBtn d-flex align-items-center justify-content-between"  type="button" data-toggle="collapse" data-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
             <p>Part #{{ loop.index }} - {{ part.order_part_name }}</p>
             <i class="fa-solid fa-chevron-down fa-shake fa-lg"></i>
           </button>
         </h2>
-        <!-- <div class="col-md-3 d-flex align-items-center justify-content-end">
+        <div class="col-md-3 d-flex align-items-center justify-content-end">
           <button type="button" class="btn-outline-danger rounded btn-delete" data-ordered-part-id="{{part.order_part_id}}">
             <i class="fa-solid fa-trash"></i> Delete
           </button>
-        </div> -->
+        </div>
       </div>
-      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div id="collapse{{ loop.index }}" class="collapse" aria-labelledby="heading{{ loop.index }}" data-parent="#accordionExample">
         <div class="card-body">
           <strong>Part Information</strong><br>
           <p>Ordered Part Name: {{ part.order_part_name }}</p>
