update orders page for mechanic

--- a/app_flask/templates/mechanic_homepage.html
+++ b/app_flask/templates/mechanic_homepage.html
@@ -5,7 +5,8 @@
     <a type="button" class="btn btn-primary btn-lg col-md accordionBtn mr-2  mech-jobs mech-open-jobs" href="/mechanic/">Open Jobs</a>
     <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn mr-2  mech-jobs mech-open-bids" href="/mechanic/openbids">Open Bids</a>
     <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn mr-2  mech-jobs mech-active-jobs" href="/mechanic/activejobs">Active Jobs</a>
-    <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn  mech-jobs mech-completed-jobs" href="/mechanic/completedjobs">Completed Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn mr-2 mech-jobs mech-completed-jobs" href="/mechanic/completedjobs">Completed Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md btn-my-orders" href="/mechanic/myorders">My Orders</a>
   </div>
 
   <!-- Example row of columns -->
