--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -130,6 +130,7 @@
 
     <script src="../static/scripts/accept_bids.js"></script>
     <script src="../static/scripts/ordered_parts.js"></script>
+    <script src="../static/scripts/ordered_parts_mechs.js"></script>
     <script src="../static/scripts/create_job.js"></script>
     <script src="../static/scripts/modal_bid.js"></script>
     <script src="../static/scripts/mechanic_homepage.js"></script>
